--- a/edu.gmu.cs.infs740.music/pom.xml
+++ b/edu.gmu.cs.infs740.music/pom.xml
@@ -21,6 +21,13 @@
 <!--  		<maven.tomcat.path>/${project.build.finalName}</maven.tomcat.path> -->
 		<maven.tomcat.path>/${project.name}</maven.tomcat.path>
 	</properties>
+	<repositories>
+		<repository>
+			<id>xqj</id>
+			<name>XQJ Maven Repository</name>
+			<url>http://xqj.net/maven</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
@@ -141,6 +148,11 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.1.2</version>
 		</dependency>
+		<dependency>
+        	<groupId>net.sf.existdb</groupId>
+        	<artifactId>exist</artifactId>
+        	<version>1.2.6</version>
+        </dependency>
 	</dependencies>
     <build>
         <plugins>
