--- a/edu.gmu.cs.infs740.music/pom.xml
+++ b/edu.gmu.cs.infs740.music/pom.xml
@@ -154,6 +154,7 @@
 		    <artifactId>jackson-databind</artifactId>
 		    <version>2.1.2</version>
 		</dependency>
+<!-- 		existdb -->
 		<dependency>
 	        <groupId>net.sf.existdb</groupId>
 	        <artifactId>exist</artifactId>
