--- a/edu.gmu.cs.infs740.music/src/main/webapp/WEB-INF/web.xml
+++ b/edu.gmu.cs.infs740.music/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,9 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			/WEB-INF/spring/root-context.xml
-			/WEB-INF/spring/appServlet/datasource-context.xml
+			classpath:/datasource-context.xml
+			classpath:/persistence-context.xml
+			/WEB-INF/spring/appServlet/security-context.xml
 		</param-value>
 	</context-param>
 	
@@ -32,5 +34,14 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
+	 <filter>
+	  <filter-name>springSecurityFilterChain</filter-name>
+	  <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	 </filter>
+	 <filter-mapping>
+	  <filter-name>springSecurityFilterChain</filter-name>
+	  <url-pattern>/*</url-pattern>
+	 </filter-mapping>
 
 </web-app>
