--- a/edu.gmu.cs.infs740.music/src/main/webapp/WEB-INF/web.xml
+++ b/edu.gmu.cs.infs740.music/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,18 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
+	<welcome-file-list>
+  		<welcome-file>welcome.jsp</welcome-file>
+  		<welcome-file>index.jsp</welcome-file>
+ 	</welcome-file-list>
+
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
+	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			/WEB-INF/spring/root-context.xml
+<!-- 			/WEB-INF/spring/root-context.xml -->
+			/WEB-INF/spring/appServlet/servlet-context.xml
 			classpath:/datasource-context.xml
 			classpath:/persistence-context.xml
 			/WEB-INF/spring/appServlet/security-context.xml
